# tasknc

./: .gitignore  BUGS  CHANGELOG  CMakeLists.txt  LICENSE  Makefile  Makefile.in  README  README.md  README.pod  color.c  color.h  command.c  command.h  common.c  common.h  config  config.h  configure  configure.ac  formats.c  formats.h  keys.c  keys.h  log.c  log.h  pager.c  pager.h  sort.c  sort.h  statusbar.c  statusbar.h  tasklist.c  tasklist.h  tasknc.c  tasknc.h  tasks.c  tasks.h  test.c  test.h  (+5 more)
cmake/Modules/: man.cmake
doc/: BUGS  CHANGELOG  CMakeLists.txt  manual.pod
etc/: astylerc
include/: color.h  command.h  common.h  config.h  formats.h  keys.h  log.h  pager.h  sort.h  statusbar.h  tasklist.h  tasknc.h  tasks.h  test.h
libtask/: .gitignore  CMakeLists.txt  config.h  json.c  json.h  task.c  task.h
old_src/: Makefile  config  formats.h  log.c  pager.c
src/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Makefile.am  Makefile.in  cmake.h.in  color.c  color.h  command.c  common.c  common.h  config  config.h  configure.c  configure.h  cursutil.c  cursutil.h  formats.c  history.c  history.h  json.c  json.h  keybind.c  keybind.h  keys.c  keys.h  log.c  log.h  main.c  pager.c  sort.c  sort.h  statusbar.c  statusbar.h  task.c  task.h  tasklist.c  tasklist.h  tasknc.c  (+3 more)
test/: .gitignore  profile.sh  valgrind.supp  valgrind_test.sh  vgdb.sh
