ADD_CUSTOM_TARGET(ManPages ALL)
SET(IN_POD manual.pod)
SET(OUT_MANPAGE tasknc.1)
ADD_CUSTOM_COMMAND(
  TARGET ManPages 
  SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/${IN_POD}
  COMMAND pod2man ARGS --errors=none -s 1 --section=1 --center="tasknc Manual" --name="tasknc" --release="tasknc ${VERSION}" ${CMAKE_CURRENT_SOURCE_DIR}/${IN_POD} 
${CMAKE_CURRENT_BINARY_DIR}/${OUT_MANPAGE} 
  OUTPUTS ${CMAKE_CURRENT_BINARY_DIR}/${OUT_MANPAGE}
)

ADD_CUSTOM_COMMAND(
  TARGET ManPages
  SOURCE ManPages
  DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${OUT_MANPAGE}
)


INSTALL(  FILES ${CMAKE_CURRENT_BINARY_DIR}/${OUT_MANPAGE}
  DESTINATION share/man/man1
)
